--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             --text-secondary: #c0c0e0;
             --card-bg: rgba(30, 32, 60, 0.7);
             --transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.1);
-            --success: #4ade80;
+            --success: #03FCD7;
             --warning: #facc15;
             --error: #f87171;
         }
