--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
         <header>
             <a href="#" class="logo" onclick="showPage('home')">
                 <span class="logo-symbol">φ(z)</span>
-                <span>Dynamic Fractal Cosmology</span>
+                <span>phi-z.space</span>
             </a>
             <nav>
                 <ul>
