--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Dynamic Fractal Cosmological Model (DFCM)</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <meta name="description" content="Discover the Dynamic Fractal Cosmological Model (DFCM), a new paradigm that resolves major tensions in modern cosmology, including the Hubble tension and Lithium-7 problem, and offers a 7.1σ statistical improvement over ΛCDM.">
+    <meta name="keywords" content="cosmology, fractal, cosmological model, DFCM, Hubble tension, Lithium-7 problem, dark matter, dark energy, Friedmann equations, ΛCDM, Big Bang Nucleosynthesis, cosmic acceleration, galaxy clustering, redshift, BBN, Planck, DESI, SNIa, Pantheon+, cosmic chronometers, CMB, matter power spectrum">
+    <meta name="author" content="Sylvain Herbin">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://phi-z.space/"> <meta property="og:type" content="website">
+    <meta property="og:url" content="https://phi-z.space/"> <meta property="og:title" content="The Dynamic Fractal Cosmological Model (DFCM) - A New Paradigm in Cosmology">
+    <meta property="og:description" content="Discover DFCM, a groundbreaking cosmological model that introduces an evolving spacetime dimension φ(z) to naturally resolve the Hubble tension, Lithium-7 problem, and large-scale structure tensions, achieving a 7.1σ improvement over ΛCDM.">
+    <meta property="og:image" content="https://phi-z.space/images/dfcm-og-image.jpg"> <meta property="og:image:alt" content="Conceptual image representing the evolving spacetime dimension in DFCM">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://phi-z.space/"> <meta name="twitter:title" content="The Dynamic Fractal Cosmological Model (DFCM)">
+    <meta name="twitter:description" content="DFCM: A new cosmological model resolving the Hubble and Lithium-7 tensions, achieving a 7.1σ statistical improvement over ΛCDM with an evolving spacetime dimension.">
+    <meta name="twitter:image" content="https://phi-z.space/images/dfcm-twitter-image.jpg"> <meta name="twitter:creator" content="@YourTwitterHandle"> <meta name="twitter:site" content="@YourTwitterHandle"> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
