--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
         <header>
             <a href="#" class="logo" onclick="showPage('home')">
                 <span class="logo-symbol">φ(z)</span>
-                <span>phi-z.space</span>
+                <span>.space</span>
             </a>
             <nav>
                 <ul>
