--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 
                 try {
                     // C'est l'URL de votre fonction Cloudflare Worker
-                    const response = await fetch('https://deepseek-proxy.sylvainherbin2b.workers.dev/', { 
+                    const response = await fetch('https://gemini-dfcm-proxy.sylvainherbin2b.workers.dev/', { 
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
