--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p>The Dynamic Fractal Cosmological Model (DFCM) &copy; 2025 - All rights reserved</p>
                 <p>A new paradigm to understand the universe</p>
 
-                <span class="author-name">Sylvain Herbin</span>
+                <span class="author-name">Sylvain Herbin ORCID: 0009-0001-3390-5012</span>
                 <p>herbinsylvain@protonmail.com</p>
             </div>
         </footer>
