--- a/index.html
+++ b/index.html
@@ -373,8 +373,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="social-links">
                     <a href="https://phi1618.space/github" target="_blank" title="GitHub Repository"><i class="fab fa-github"></i></a>
                     <a href="https://phi1618.space/orcid" target="_blank" title="ORCID Profile"><i class="fab fa-orcid"></i></a>
-                    <a href="https://phi1618.space/x" target="_blank" title="X (Twitter)"><i class="fab fa-x-twitter"></i></a>
-                    <a href="https://phi1618.space/zenedo" target="_blank" title="Zenodo Repository"><i class="fas fa-database"></i></a>
+                    <a href="https://phi1618.space/x" target="_blank" title="X (Twitter)"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://phi1618.space/zenedo" target="_blank" title="Zenodo Repository"><i class="ai ai-zenodo"></i></a>
+                    <a href="mailto:herbinsylvain@protonmail.com" class="social-link" title="Email" target="_blank">
+                <i class="fas fa-envelope"></i>
+            </a>
                 </div>
 
                 <a href="https://doi.org/10.5281/zenodo.15973540"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.15973540.svg" alt="DOI"></a>
