--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <a href="https://phi1618.space/github" target="_blank" title="GitHub Repository"><i class="fab fa-github"></i></a>
                     <a href="https://phi1618.space/orcid" target="_blank" title="ORCID Profile"><i class="fab fa-orcid"></i></a>
                     <a href="https://phi1618.space/x" target="_blank" title="X (Twitter)"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="https://phi1618.space/zenedo" target="_blank" title="Zenodo Repository"><i class="ai ai-zenodo"></i></a>
+                    <a href="https://phi1618.space/zenedo" class="social-link" title="Zenodo" target="_blank"><i class="ai ai-zenodo"></i></a>
                     <a href="mailto:herbinsylvain@protonmail.com" class="social-link" title="Email" target="_blank">
                 <i class="fas fa-envelope"></i>
             </a>
