--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="twitter:creator" content="@YourTwitterHandle">
     <meta name="twitter:site" content="@YourTwitterHandle">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.9.4/css/academicons.min.css" integrity="sha512-Vf6s0bG7YAA4s8YgYQ8k1vHY5CkFMLLYQPrf4p8zA2cLB2fOtC4ZoQvRx0TNoq6b6fK+Eu8p+WYKO+AZiE4UlyQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
