--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <p><strong>DFCM Solution:</strong> By setting a specific primordial fractal dimension (φ<sub>BBN</sub> = 2.970), the model alters nuclear reaction rates during BBN, bringing the predicted Lithium-7 abundance into <strong>1.8σ agreement</strong> with observations.</p>
                     </div>
                     <div class="model-card">
-                        <i class="fa-regular fa-galaxy"></i>
+                        <i class="fa-solid fa-hurricane"></i>
                         <h3>Large-Scale Structure (LSS) Tensions</h3>
                         <p><strong>Problem:</strong> ΛCDM predicts more massive galaxy clusters than are observed and struggles with the precise galaxy distribution.</p>
                         <p><strong>DFCM Solution:</strong> The new dark matter-baryon coupling suppresses the formation of the most massive structures, predicting a cluster deficit of <strong>18.2% ± 2.3%</strong> at z ~ 0.6 and providing a superior fit to data.</p>
