--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                         
                         <div class="controls">
-                            <button class="control-btn" id="playBtn">▶ Play</button>
-                            <button class="control-btn" id="pauseBtn">⏸ Pause</button>
-                            <button class="control-btn" id="resetBtn">↺ Reset</button>
+                            <button class="control-btn" id="playBtn"><i class="fa-solid fa-circle-play"></i></button>
+                            <button class="control-btn" id="pauseBtn"><i class="fa-solid fa-circle-pause"></i></button>
+                            <button class="control-btn" id="resetBtn"><i class="fa-solid fa-circle-arrow-left"></i></button>
                         </div>
                     </div>
                 </div>
