--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                         
                         <div class="controls">
-                            <button class="control-btn" id="playBtn"><i class="fa-solid fa-circle-play">play</i></button>
-                            <button class="control-btn" id="pauseBtn"><i class="fa-solid fa-circle-pause">pause</i></button>
+                            <button class="control-btn" id="playBtn"><i class="fa-solid fa-circle-play"></i>play</button>
+                            <button class="control-btn" id="pauseBtn"><i class="fa-solid fa-circle-pause"></i>pause</button>
                             <button class="control-btn" id="resetBtn"><i class="fa-solid fa-circle-arrow-left"></i>reset</button>
                         </div>
                     </div>
