--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <header>
             <a href="#" class="logo" onclick="showPage('home')">
-                <span class="logo-symbol">φ(z)</span>
-                <span>.space</span>
+        <span class="logo-symbol">φ<span class="logo-subscript">(z)</span></span>
+        <span class="logo-domain">.space</span>
+    </a>
             </a>
             <nav>
                 <ul>
