--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <header>
             <a href="#" class="logo" onclick="showPage('home')">
-        <span class="logo-symbol">φ<span class="logo-subscript">(z)</span></span>
+        <span class="logo-symbol">φ<span class="redshift">(z)</span></span>
         <span class="logo-domain">.space</span>
     </a>
-            </a>
             <nav>
                 <ul>
                     <li><a href="#" class="active" onclick="showPage('home')">Home</a></li>
