--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <header>
             <a href="#" class="logo" onclick="showPage('home')">
-        <span class="logo-symbol">φ<span class="redshift">(z)</span></span>
-        <span class="logo-domain">.space</span>
+        <div class="math-container">
+            <span class="phi">φ</span>
+            <span class="redshift">(z)</span>
+        </div>
+        <span class="domain">.space</span>
     </a>
             <nav>
                 <ul>
