--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="model-card">
                         <i class="fas fa-skull-crossbones"></i>
                         <h3>DFCM's Prediction: The Big Rip</h3>
-                        <p>The DFCM model definitively predicts a <strong>Big Rip</strong>. This conclusion stems from the behavior of the dark energy density, $\rho_\Lambda(z)$, which scales as $\rho_\Lambda(z) \propto (1+z)^{3(2-\phi(z))}$.</p>
+                        <p>The DFCM model definitively predicts a **Big Rip**. This conclusion stems from the behavior of the dark energy density, $\rho_\Lambda(z)$, which scales as $\rho_\Lambda(z) \propto (1+z)^{3(2-\phi(z))}$.</p>
                         <p>As the Universe expands (redshift $z \to -1$), the fractal dimension φ(z) increases, causing the exponent $3(2-\phi(z))$ to become increasingly negative. Consequently, the dark energy density **increases** over time.</p>
                         <p>This increasing dark energy density into the future is the hallmark of **phantom energy**, where the equation of state $w_\Lambda(z) = 1 - \phi(z)$ consistently falls below $-1$. This direct consequence of the evolving fractal geometry means that, eventually, the accelerating expansion will become strong enough to overcome all fundamental forces, leading to the tearing apart of all cosmic structures.</p>
                     </div>
