--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <section class="hero">
                 <h1>The Dynamic Fractal Cosmological Model</h1>
                 <p>Discover a new paradigm that resolves the greatest tensions in modern cosmology. By introducing an evolving spacetime dimension, DFCM accurately predicts the Universe's expansion, the formation of cosmic structures, and achieves a <strong>7.1σ statistical improvement</strong> over the standard $\Lambda$CDM model.</p>
-                <a href="https://doi.org/10.5281/zenodo.15973540" target="_blank" class="btn btn-download">
+                <a href="https://phi1618.space/zenodo" target="_blank" class="btn btn-download">
                     <i class="fas fa-rocket"></i>
                     <span>Explore the Full Paper</span>
                     <span class="btn-glow"></span>
@@ -428,13 +428,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <a href="https://phi1618.space/github" target="_blank" title="GitHub Repository"><i class="fab fa-github"></i></a>
                     <a href="https://phi1618.space/orcid" target="_blank" title="ORCID Profile"><i class="fab fa-orcid"></i></a>
                     <a href="https://phi1618.space/x" target="_blank" title="X (Twitter)"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="https://phi1618.space/zenedo" class="social-link" title="Zenodo" target="_blank"><i class="ai ai-zenodo"></i></a>
+                    <a href="https://phi1618.space/zenodo" class="social-link" title="Zenodo" target="_blank"><i class="ai ai-zenodo"></i></a>
                     <a href="mailto:herbinsylvain@protonmail.com" class="social-link" title="Email" target="_blank">
                 <i class="fas fa-envelope"></i>
             </a>
                 </div>
 
-                <a href="https://doi.org/10.5281/zenodo.15973540"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.15973540.svg" alt="DOI"></a>
+                <a href="https://phi1618.space/zenodo"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.16639073.svg" alt="DOI"></a>
 
                 <p>The Dynamic Fractal Cosmological Model (DFCM) &copy; 2025 - All rights reserved</p>
                 
