--- a/index.html
+++ b/index.html
@@ -25,15 +25,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta property="og:description" content="Discover DFCM, a groundbreaking cosmological model that introduces an evolving spacetime dimension φ(z) to naturally resolve the Hubble tension, Lithium-7 problem, and large-scale structure tensions, achieving a 7.1σ improvement over ΛCDM.">
     <meta property="og:image" content="https://phi-z.space/images/dfcm-og-image.jpg">
     <meta property="og:image:alt" content="Conceptual image representing the evolving spacetime dimension in DFCM">
-
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://phi-z.space/">
-    <meta name="twitter:title" content="The Dynamic Fractal Cosmological Model (DFCM)">
-    <meta name="twitter:description" content="DFCM: A new cosmological model resolving the Hubble and Lithium-7 tensions, achieving a 7.1σ statistical improvement over ΛCDM with an evolving spacetime dimension.">
-    <meta name="twitter:image" content="https://phi-z.space/images/dfcm-twitter-image.jpg">
-    <meta name="twitter:creator" content="@YourTwitterHandle">
-    <meta name="twitter:site" content="@YourTwitterHandle">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://phi-z.space/">
+<meta name="twitter:title" content="DFCM: Redefining Cosmology">
+<meta name="twitter:description" content="Discover DFCM: resolves Hubble & Lithium-7 tensions with a 7.1σ edge over ΛCDM via evolving spacetime.">
+<meta name="twitter:image" content="https://phi-z.space/images/dfcm-twitter-image.jpg">
+<meta name="twitter:site" content="@sylvainherbin2b">
+<meta name="twitter:creator" content="@sylvainherbin2b"> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
