--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta name="twitter:url" content="https://phi-z.space/">
 <meta name="twitter:title" content="DFCM: Redefining Cosmology">
 <meta name="twitter:description" content="Discover DFCM: resolves Hubble & Lithium-7 tensions with a 7.1σ edge over ΛCDM via evolving spacetime.">
-<meta name="twitter:image" content="https://phi-z.space/images/dfcm-twitter-image.jpg">
+<meta name="twitter:image" content="https://phi-z.space/images/central-equation-dfcm.jpg">
 <meta name="twitter:site" content="@sylvainherbin2b">
-<meta name="twitter:creator" content="@sylvainherbin2b"> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+<meta name="twitter:creator" content="@sylvainherbin2b">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
