--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta name="twitter:url" content="https://phi-z.space/">
 <meta name="twitter:title" content="DFCM: Redefining Cosmology">
 <meta name="twitter:description" content="Discover DFCM: resolves Hubble & Lithium-7 tensions with a 7.1σ edge over ΛCDM via evolving spacetime.">
-<meta name="twitter:image" content="https://phi-z.space/images/central-equation-dfcm.jpg">
+<meta name="twitter:image" content="https://phi-z.space/images/central-equation-dfcm.png">
 <meta name="twitter:site" content="@sylvainherbin2b">
 <meta name="twitter:creator" content="@sylvainherbin2b">
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
