--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <thead>
                             <tr>
                                 <th>Cosmological Probe</th>
-                                <th>Chi-squared/dof</th>
+                                <th>$\chi^2/\text{dof}$</th>
                                 <th>Description</th>
                             </tr>
                         </thead>
