--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <a href="https://phi1618.space/x" target="_blank" title="X (Twitter)"><i class="fa-brands fa-x-twitter"></i></a>
                     <a href="https://phi1618.space/zenodo" class="social-link" title="Zenodo" target="_blank"><i class="ai ai-zenodo"></i></a>
                     <a href="mailto:herbinsylvain@protonmail.com" class="social-link" title="Email" target="_blank"><i class="fas fa-envelope"></i></a>
-                    <a href="https://youtube.com/@phi-z-space?si=LRoMS74vkCo75MBO" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
+                    <a href="https://phi1618.space/youtube" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
                 </div>
 
                 <a href="https://phi1618.space/zenodo"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.16639073.svg" alt="DOI"></a>
