--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <span>Explore the Full Paper</span>
                     <span class="btn-glow"></span>
                 </a>
+            <div class="model-card">
+                        <i class="fas fa-youtube"></i>
+                        <h3>Introduction video</h3>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/1?autoplay=0&amp;controls=1&amp;disablekb=0&amp;fs=1&amp;iv_load_policy=1&amp;loop=0&amp;modestbranding=0&amp;playsinline=1&amp;rel=0&amp;showinfo=1&amp;theme=dark&amp;color=white" title="Exploring the Dynamic Fractal Cosmological Model (DFCM)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
             </section>
 
             <section class="model-section">
